# PDF_template_gen

./: .gitignore  package-lock.json  pyproject.toml
.github/workflows/: python-ci.yml
_bmad-output/brainstorming/: brainstorming-session-2026-04-05-1500.md
_bmad-output/implementation-artifacts/: 1-1-initialisation-du-projet-avec-le-starter-template.md  1-2-structure-des-modules-et-erreurs-de-base.md  1-3-ci-github-actions.md  2-1-parsing-et-validation-de-book-yaml.md  2-2-parser-markdown-vers-ast.md  2-3-renderer-pdf-template-typst-de-base.md  2-4-table-des-matieres-et-pages-liminaires.md  2-5-pages-de-garde-de-chapitre-et-en-tetes-pieds-de-page.md  2-6-integration-des-images-et-diagrammes.md  2-7-couverture-template-statique.md  2-8-export-metadonnees-kdp-et-dossier-de-sortie.md  2-9-cli-logging-et-progression.md  3-1-renderer-epub-via-pandoc.md  3-2-dual-export-pdf-epub-en-une-commande.md  4-1-systeme-de-design-tokens-yaml-et-registre-d-assertions.md  4-2-classe-de-document-et-jeu-de-tokens-predefini.md  4-3-balises-semantiques-frameworks-callouts-chapter-summary.md  4-4-numerotation-differenciee-et-escape-hatch-typst.md  5-1-4e-de-couverture-et-calcul-du-dos.md  deferred-work.md  epic-1-retro-2026-04-09.md  epic-2-retro-2026-04-09.md  epic-3-retro-2026-04-09.md  sprint-status.yaml  (+1 more)
docs/: book.yaml.example
tests/: conftest.py  test_cli.py  test_config.py  test_cover.py  test_errors.py  test_export.py  test_external.py  test_init.py  test_packages.py  test_parser.py  test_pipeline.py  test_renderer_epub.py  test_renderer_pdf.py  test_semantic.py  test_tokens.py
(+75 files in other folders)
