[project]
name = "bookforge"
version = "0.1.0"
description = "Pipeline CLI transformant des manuscrits Markdown en PDF et EPUB conformes KDP."
readme = "README.md"
authors = [
    { name = "jmpl", email = "jmpl.code@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "markdown-it-py>=4.0.0",
    "matplotlib>=3.10.8",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "typer>=0.24.1",
]

[project.scripts]
bookforge = "bookforge.cli:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]

[tool.ruff]
line-length = 100
include = ["src/bookforge/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
